--- a/src/index.css
+++ b/src/index.css
@@ -15,12 +15,13 @@ a{
 .main_body{
   width: 75%;
   height: 100vh;
+  overflow-y: scroll;
 }
 .create_body{
   width: 25%;
   height: 100vh;
 }
-.card_main{
+.card_main, .update_todo_main{
   display: flex;
   flex-direction: column;
   gap: 15px;
@@ -32,11 +33,9 @@ a{
   -moz-border-radius: 8px;
   -ms-border-radius: 8px;
   -o-border-radius: 8px;
-  position: sticky;
-  top: 0;
-  right: 0;
+
 }
-.card_main input{
+.card_main input, .update_todo_main input{
   padding: 7px 10px;
 }
 .input_group{
@@ -77,4 +76,40 @@ a{
 .input_group span{
   font-size: 12px;
   color: red;
+}
+.todo_loader{
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 9999;
+}
+.update_todo{
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.8);
+  position: absolute;
+  left: 0;
+  top: 0;
+  z-index: 55;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.update_todo_main{
+  width: 400px;
+}
+.cancel{
+  padding: 7px 10px;
+  background-color: blueviolet;
+  color: #fff;
+  border: none;
+  position: absolute;
+  right: 30px;
+  top: 30px;
 }
